--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@types/node": "^12.0.10",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^3.6.3",
     "pug": "^2.0.4",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
